# big

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/include/: big.hpp
src/include/big/: big.hpp  intrin.hpp  util.hpp
test/: CMakeLists.txt  test_best_int.cpp
